# zinn

./: Cargo.toml  README.md  TODO.md  flake.nix
.github/workflows/: docs.yml  rust.yml
examples/cproj/: main.c  math.c  math.h  output.c  output.h  zinn.yaml  zinn.yml
src/: barkeeper.rs  constants.rs  error.rs  hbextensions.rs  job.rs  main.rs  nix.rs  queue.rs  worker.rs
