[package]
name = "zinn"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
indicatif = "0.17.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.61"
