[package]
name = "zinn"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Manage build jobs for projects in YAML files"
homepage = "https://github.com/jzbor/zinn"
repository = "https://github.com/jzbor/zinn"
readme = "./README.md"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
console = "0.15.8"
handlebars = "5.1.2"
indicatif = { version = "0.17.8", optional = true }
os_pipe = "1.2.0"
regex-lite = { version = "0.1.6", optional = true }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.61"

[features]
regex = ["dep:regex-lite"]
progress = ["dep:indicatif"]
default = ["regex", "progress"]

[profile.release]
lto = "thin"
opt-level="s"
